@@ -1,6 +1,8 @@
 2014/06/20 (1.2.17)
 - Removed useless sticky label debug logging.
 - Changed label prefix from @ to a more convenient #.
+- Fixed track skipping with ices.
+- New CLI command: ardj skip.
 
 2014/06/19 (1.2.15)
 - New command: ardj jabber probe.
